--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1,2 +1,8 @@
 // Put your styles here :)
 
+// Vendors
+@import '../components/centagon-primer/src/sass/primer';
+
+// Base
+@import './base/variables';
+@import './base/colors';
