--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1,7 +1,7 @@
 // Put your styles here :)
 
 // Vendors
-@import './components/centagon-primer/src/sass/primer';
+@import '../components/centagon-primer/src/sass/primer';
 
 // Base
 @import './base/variables';
